<resources>
    <string name="app_name">PRM_PRO_2</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="color">color</string>
    <string name="save">Save</string>
    <string name="font_size">Font size</string>
    <string name="settings">Settings</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="setting">Setting</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="photo_book">Photo book</string>
    <string name="error">Error</string>
    <string name="km_radius">KM radius</string>
</resources>
