<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.365"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.07999998"
        tools:ignore="MissingConstraints">


        <TextView
            android:id="@+id/w3_textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/red"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/s_seekBar1"
            app:layout_constraintEnd_toStartOf="@+id/s_seekBar1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/s_seekBar1"
            app:layout_constraintVertical_bias="1.0" />


        <SeekBar
            android:id="@+id/s_seekBar1"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/s_textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/green"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/s_seekBar2"
            app:layout_constraintEnd_toStartOf="@+id/s_seekBar2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/s_seekBar2" />

        <SeekBar
            android:id="@+id/s_seekBar3"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/s_seekBar2"
            app:layout_constraintHorizontal_bias="0.57"
            app:layout_constraintStart_toStartOf="@+id/s_seekBar2"
            app:layout_constraintTop_toBottomOf="@+id/s_seekBar2"
            tools:targetApi="o" />

        <TextView
            android:id="@+id/w3_textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/blue"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/s_seekBar3"
            app:layout_constraintEnd_toStartOf="@+id/s_seekBar3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/s_seekBar3" />

        <SeekBar
            android:id="@+id/s_seekBar2"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="132dp"
            android:layout_height="22dp"
            android:layout_marginTop="32dp"
            android:max="255"
            android:min="0"
            android:progress="0"
            app:layout_constraintEnd_toEndOf="@+id/s_seekBar1"
            app:layout_constraintStart_toStartOf="@+id/s_seekBar1"
            app:layout_constraintTop_toBottomOf="@+id/s_seekBar1"
            tools:targetApi="o" />

        <ImageView
            android:id="@+id/s_imageView"
            android:layout_width="70dp"
            android:layout_height="67dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/s_seekBar2"
            app:layout_constraintTop_toTopOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/ws_textSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/font_size"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <EditText
        android:id="@+id/s_fontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toEndOf="@+id/ws_textSize"
        app:layout_constraintTop_toTopOf="@+id/ws_textSize" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/settings"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/s_save"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_save"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/s_fontSize" />

        <Button
            android:id="@+id/s_cancel"
            style="@android:style/Widget.Holo.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="0dp"
            android:layout_weight="1"
            android:drawableStart="@android:drawable/ic_menu_close_clear_cancel"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/s_fontSize" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>